Add a new key "logintUrl" in configuration to support build link of login with CAS.
Update from hard-code by using thymeleaf th:href="@{/....

--- a/web/src/main/webapp/WEB-INF/templates/fragments/home/footerForIntro.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/home/footerForIntro.html
@@ -68,16 +68,16 @@
                 style="width: 60px; background-color: #7c4dff; height: 2px"
                 />
             <p>
-              <a href="http://localhost:8080/crm-web/feedback" class="text-dark">Chính Sách</a>
+              <a th:href="@{/feedback}" class="text-dark">Chính Sách</a>
             </p>
             <p>
-              <a href="http://localhost:8080/crm-web/feedback" class="text-dark">Giới thiệu tính năng</a>
+              <a th:href="@{/feedback}" class="text-dark">Giới thiệu tính năng</a>
             </p>
             <p>
-              <a href="http://localhost:8080/crm-web/feedback" class="text-dark">Báo giá</a>
+              <a th:href="@{/feedback}" class="text-dark">Báo giá</a>
             </p>
             <p>
-              <a href="http://localhost:8080/crm-web/feedback" class="text-dark">Phản hồi</a>
+              <a th:href="@{/feedback}" class="text-dark">Phản hồi</a>
             </p>
           </div>
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4 text-start">
