Update configuration for Login using CAS

--- a/web/src/main/webapp/WEB-INF/templates/fragments/createOrderModal.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/createOrderModal.html
@@ -233,7 +233,7 @@
 			</div>
 	    </form>
 	</div>
-	<!-- Modal CRUD Người phụ trách -->
+	<!-- Modal CRUD Loại hàng hóa -->
 		<div class="modal" tabindex="-1" role="dialog" id="goodsCategoryModal" aria-hidden="true">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
