--- a/web/src/main/webapp/WEB-INF/templates/ecosystem.html
+++ b/web/src/main/webapp/WEB-INF/templates/ecosystem.html
@@ -446,7 +446,7 @@
 	    fixedToolbar.classList.remove("d-none");
 	    fixedToolbar.innerHTML = `
 	        <div class="container d-flex align-items-center">
-	            <a href="/crm-web/" class="text-decoration-none d-flex align-items-center position-relative">
+	            <a href="${_ctx}guest" class="text-decoration-none d-flex align-items-center position-relative">
 	                <img src="resources/Image/intro.png" alt="Logo" class="img-fluid me-3" style="height: 50px;">
 	            </a>
 	            <span></span> <!-- Nội dung sẽ thay đổi khi cuộn -->
