Config send email.

--- a/web/src/main/webapp/WEB-INF/templates/fragments/home/trialRegistrtrationForm.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/home/trialRegistrtrationForm.html
@@ -17,7 +17,7 @@
                 </div>
 
                <!--  <form th:action="@{/register}" method="post"> -->
-               <form>
+               <form action="/send-email" method="post">
                     <div class="mb-3">
                         <label for="contactName">Người liên hệ chính/Contact name</label>
                         <input type="text" id="contactName" name="contactName" class="form-control" required>
