Fix error of configuration's sending email successfully. Complete basic sending email (version 0).

--- a/web/src/main/webapp/WEB-INF/templates/emailTemplate.html
+++ b/web/src/main/webapp/WEB-INF/templates/emailTemplate.html
@@ -20,7 +20,7 @@
 <body>
     <div class="container">
         <h3>Thông tin đăng ký từ khách hàng:</h3>
-        <p><strong>Địa điểm:</strong> {{location}}</p>
+<!--         <p><strong>Địa điểm:</strong> {{location}}</p> -->
         <p><strong>Người liên hệ:</strong> {{contactName}}</p>
         <p><strong>Điện thoại:</strong> {{contactNumber}}</p>
         <p><strong>Email:</strong> {{email}}</p>
