--- a/web/src/main/webapp/resources/css/customerDetail.css
+++ b/web/src/main/webapp/resources/css/customerDetail.css
@@ -6,44 +6,81 @@ body {
 
 .container {
 	display: flex;
+	flex-wrap: wrap;
+    gap: 20px;
 }
 
 .left-panel {
 	width: 30%;
-	padding: 20px;
+	padding-right: 20px;
 	background-color: #f5f5f5;
+	flex: 1;
 }
 
-.right-panel {
+.right-container {
 	width: 70%;
+    flex: 2;
+}
+
+.common-info, .email-to-customer{
+	border-radius: 10px;
+    border: solid;
+    height: 200px;
+    margin-bottom: 20px;
+    border-color: #c7c7c7;
+    background-color: white;
+}
+
+
+.right-panel {
 	padding: 20px;
 	background-color: #ffffff;
+	flex: 2;
+	margin-bottom: 20px;
+    border-color: #c7c7c7 !important;
+    border-radius: 10px;
+    border: solid;
+    height: 54%;
+    margin-bottom: 20px;
 }
 
 .user-info {
 	display: flex;
-	align-items: center;
+	align-items: flex-start;
+	line-height: 2;
 }
 
 .user-avatar {
-	width: 80px;
-	height: 80px;
+	width: 100px;
+	/* height: 80px; */
 	border-radius: 50%;
 	background-color: #cccccc;
 	margin-right: 10px;
+	/* margin-top: -90px; */
+	min-width: 90px; /* Đảm bảo kích thước tối thiểu */
 }
 
 .user-avatar img {
-	width: 80px;
-	height: 80px;
+	width: 100px;
+	/* height: 100px; */
 	border-radius: 50%;
 	object-fit: cover;
+}
+
+.user-details{
+	border: solid;
+    border-radius: 10px;
+    padding: 8px;
+    width: fit-content;
+    border-color: #88a3d2;
+    background-color: #deeaff;
 }
 
 .user-details h2 {
 	margin: 0;
 	font-size: 24px;
 	color: #5d5d5d;
+	line-height: 1.5
 }
 
 .user-details p {
@@ -164,4 +201,15 @@ body {
 	border: none;
 	border-radius: 5px;
 	float: right;
+}
+
+.drop-down .dropdown-menu {
+    top: 100%; 
+    transform: translateY(0);
+    will-change: unset;
+}
+
+.drop-down .dropdown-toggle {
+    position: relative;
+    z-index: 1;
 }
