--- a/web/src/main/webapp/WEB-INF/templates/fragments/common_css.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/common_css.html
@@ -15,6 +15,11 @@
 	<link rel="shortcut icon" type="image/x-icon" th:href="@{/resources/app-assets/images/ico/favicon.ico}">
 	<!-- BEGIN VENDOR CSS -->
 	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/css/vendors.min.css}">
+	
+	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/vendors/css/forms/toggle/switchery.min.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/vendors/css/extensions/dragula.min.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/css/plugins/forms/switch.min.css}">
+	
 	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/vendors/css/forms/icheck/icheck.css}">
 	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/vendors/css/forms/icheck/custom.css}">
 	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/vendors/css/charts/morris.css}">
