--- a/web/src/main/webapp/WEB-INF/templates/fragments/common_javascript.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/common_javascript.html
@@ -12,6 +12,9 @@
 <!-- <script th:src="@{/resources/app-assets/vendors/js/charts/raphael-min.js}"></script>
 <script th:src="@{/resources/app-assets/vendors/js/charts/morris.min.js}"></script> -->
 <script th:src="@{/resources/app-assets/vendors/js/extensions/unslider-min.js}"></script>
+
+<script th:src="@{/resources/app-assets/vendors/js/forms/toggle/switchery.min.js}"></script>
+<script th:src="@{/resources/app-assets/vendors/js/extensions/dragula.min.js}"></script>
 <!-- <script th:src="@{/resources/app-assets/vendors/js/charts/echarts/echarts.js}"></script> -->
 <!-- END PAGE VENDOR JS-->
 <!-- BEGIN ROBUST JS-->
