--- a/web/src/main/webapp/WEB-INF/templates/fragments/home/sidebar.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/home/sidebar.html
@@ -5,7 +5,7 @@
 				diện</h1>
 			<p class="lead">Nâng cao năng suất, đơn giản hóa quy trình và
 				phát triển doanh nghiệp của bạn với CRM.</p>
-			<a href="#" class="btn btn-primary btn-lg">Dùng thử ngay</a>
+			<a href="#" class="btn btn-primary btn-lg" style="font-weight: 600;">Dùng ngay</a>
 		</div>
 		<div class="container text-center">
 			<img src="resources/Image/intro.png" alt="CRM Banner" class="img-fluid rounded">
