--- a/web/src/main/webapp/resources/css/customerDetail.css
+++ b/web/src/main/webapp/resources/css/customerDetail.css
@@ -25,7 +25,7 @@ body {
 .common-info, .email-to-customer{
 	border-radius: 10px;
     border: solid;
-    height: 200px;
+    height: auto;
     margin-bottom: 20px;
     border-color: #c7c7c7;
     background-color: white;
@@ -240,13 +240,28 @@ body {
     display: block;
     width: 95%; /* Điều chỉnh độ dài */
     height: 1px;
-    background-color: #ccc; /* Màu xám nhạt giống hình */
+    background-color: #ccc; 
     position: absolute;
     top: 0;
     left: 50%;
     transform: translateX(-50%);
 }
 
+.card-body{
+	position: relative;	
+}
+
+/* .card-body::after {
+    content: "";
+    display: block;
+    width: 95%;
+    border-bottom: 1.5px dashed #ccc; 
+    position: absolute;
+    left: 50%;
+   	font-weight: 500px;
+    transform: translateX(-50%);
+}
+ */
   /* Modal mặc định ẩn */
 .email-modal {
     position: fixed;
