In progress: Sending email to customer and save to database (still existing bugs).

--- a/web/src/main/webapp/WEB-INF/templates/customerDetail.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerDetail.html
@@ -49,7 +49,7 @@
 					<!-- Outline buttons with Icons -->
 					
 					<fieldset class="form-group relative has-icon-left col-md-5 col-12 float-right p-0">
-						<button id="openEmailModal" type="button" class="mr-1 mb-1 btn btn-outline-primary btn-min-width"><i class="fa fa-envelope-o"></i> Gửi Email</button>
+						<button id="openEmailModal" data-customer-id="${customer.id}" data-customer-email="${customer.email}" type="button" class="mr-1 mb-1 btn btn-outline-primary btn-min-width"><i class="fa fa-envelope-o"></i> Gửi Email</button>
 					</fieldset>
 				</div>
 				
@@ -65,19 +65,35 @@
 						        <button class="btn btn-danger" id="closeEmailModal"><i class="fa fa-times"></i></button>
 						    </div>
 						</div>
-						<form th:action="@{/send-email-to-customer}" method="post">
-							<div class="email-header d-flex justify-content-between align-items-center">
-							    <span class="user-name-email">Phuong Ngan < <span>example@gmail.com</span> > </span>					    
+						<!-- <form th:action="@{/send-email-to-customer}" method="post"> -->
+							<div th:if="${#request.userPrincipal}" class="email-header d-flex justify-content-between align-items-center">
+							    <!-- <span class="user-name-email">Phuong Ngan < <span>example@gmail.com</span> > </span> -->
+							    <span style="color: gray;" class="user-name-email" >
+							    	from:
+							    	<span style="color: black;" th:text="${#request.userPrincipal.name}"></span>
+							    </span>					    
+							    <input type="hidden" id="loggedInUserEmail" th:value="${#request.userPrincipal.name}">
 							</div>
-					    	
-					        <input type="text" name="to" class="form-control mb-2" placeholder="Đến">
-					        <input type="text" name="subject" class="form-control mb-2" placeholder="Chủ đề">
-					        <textarea class="form-control mb-2" name="message" rows="5" placeholder="Nội dung"></textarea>
+							
+							
+					    	<div class="form-group">
+							    <label style="color: gray; width: 80px;">to:</label>
+							    <input style="color: black;" id="emailTo" th:value="${customer.email}" type="text" name="to" class="form-control mb-2" placeholder="Đến" readonly>
+							</div>
+							
+							<div class="form-group">
+							    <label style="color: gray; width: 80px;">subject:</label>
+							    <input style="color: black;" id="emailSubject" type="text" name="subject" class="form-control mb-2" placeholder="Chủ đề">
+							</div>
+							
+							<div class="form-group">
+							    <label style="color: gray; width: 80px;">content:</label>
+							    <textarea style="color: black;" id="emailContent" class="form-control mb-2" name="message" rows="5" placeholder="Nội dung"></textarea>
+							</div>
 					        
-					        <button class="btn btn-primary w-30" type="submit" >Send</button>
+					        <button class="btn btn-primary w-30" id="sendEmailBtn" type="submit" >Send</button>
 					        <div th:if="${success}" class="alert alert-success" th:text="${success}"></div>
 					        <div th:if="${error}" class="alert alert-danger" th:text="${error{}"></div>
-					    </form>
 					    	<button class="btn btn-light w-30" type="submit" style="border: solid 1px; margin-top: 10px; margin-left: 700px;">Save draft</button>					        
 				    </div>
 				 
